[gd_scene load_steps=2 format=3 uid="uid://oqpbqlmeytpc"]

[ext_resource type="Script" uid="uid://cxdkfvopcvrak" path="res://Resources/UI/HarvestBinUI.gd" id="1_lscub"]

[node name="HarvestBinUI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_lscub")

[node name="Panel" type="PanelContainer" parent="Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 320.0
offset_top = 228.0
offset_right = 960.0
offset_bottom = 795.0

[node name="Background" type="ColorRect" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 2
color = Color(0.819608, 0.709804, 0.54902, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.7, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Harvest Bin"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="CropListContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TotalValueLabel" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"

[node name="SellButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sell"
